kubernetes/apps/media/radarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: radarr
          image: ghcr.io/onedr0p/radarr-develop:5.16.3@sha256:af1d6a1fb22f135997ed90ec65a5ebc0dec917576f7267002a6b5b4144aedaa0
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - name: samba-config
              mountPath: /config
            - name: radarr-downloads
              mountPath: /downloads
      volumes:
        - name: samba-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: radarr-downloads
          nfs:
            server: 192.168.1.111
            path: /mnt/STORAGE-01/Media-Storage
