kubernetes/apps/media/radarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-middlewares-authentik@kubernetescrd
  name: radarr
spec:
  rules:
    - host: &host radarr.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                namespace: authentik
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: local-solonsstuff-com-live-tls
